Fix mobile off-screen issue by centering Swiper via JS instead of CSS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -408,7 +408,3 @@ h2 {
         padding: 25px;
     }
 }
-/* Center team cards when there are not enough to fill the screen */
-.membersSwiper .swiper-wrapper {
-    justify-content: center;
-}
